--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,11 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
-
-tasks.register("serverApiValidate", ValidateTask) {
+openApiValidate {
     inputSpec = "$projectDir${openapi_path}".toString()
     recommend = true
 }
-
-tasks.register("serverApiGenerate", GenerateTask) {
+openApiGenerate {
     generatorName = "spring"
     library = "spring-boot"
     inputSpec = "$projectDir${openapi_path}".toString()
@@ -53,35 +51,15 @@ tasks.register("serverApiGenerate", GenerateTask) {
     invokerPackage = "info.touret.apifirst.sample.generated.invoker"
     modelPackage = "info.touret.apifirst.sample.generated"
     configOptions = [
-            dateLibrary                   : "java8",
-            java8                         : "true",
-            openApiNullable               : "false",
-            documentationProvider         : "springdoc",
-            useBeanValidation             : "true",
-            interfaceOnly                 : "true",
-            useSpringBoot3                : "true",
-            generateConstructorWithAllArgs: "true"
+            dateLibrary          : "java8",
+            java8                : "true",
+            openApiNullable      : "false",
+            documentationProvider: "springdoc",
+            useBeanValidation    : "true",
+            interfaceOnly        : "true",
+            useSpringBoot3       : "true",
+            generateConstructorWithAllArgs : "true"
     ]
 }
 sourceSets.main.java.srcDirs += "$buildDir/generated/src/main/java".toString()
-compileJava.dependsOn 'serverApiGenerate'
-
-tasks.register("mockApiGenerate", GenerateTask) {
-    generatorName = "java-wiremock"
-    inputSpec = "$projectDir${openapi_path}".toString()
-    outputDir = "$buildDir/generated".toString()
-    apiPackage = "info.touret.apifirst.sample.mock"
-    invokerPackage = "info.touret.apifirst.sample.mock.invoker"
-    modelPackage = "info.touret.apifirst.sample.mock"
-
-    configOptions = [
-            dateLibrary                   : "java8",
-            java8                         : "true",
-            openApiNullable               : "false",
-            documentationProvider         : "springdoc",
-            useBeanValidation             : "true",
-            interfaceOnly                 : "true",
-            useSpringBoot3                : "true",
-            generateConstructorWithAllArgs: "true"
-    ]
-}
+compileJava.dependsOn 'openApiGenerate'
